# scikit-digital-health

./: .coveragerc  .flake8  .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  doc_requirements.txt  gh_actions_requirements.txt  library_requirements.txt  log.txt  meson.build  meson.options  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml
.github/workflows/: actions.yml  actions.yml.bak  build.yml  build_publish.yml  build_publish_test.yml  macos_actions.yml  macos_actions.yml.bak  test.yml  test_windows.yml
PfyMU/: __init__.py  base.py  setup.py  utility.py
PfyMU/activity/: core.py  metrics.py
PfyMU/features/: __init__.py  core.py  setup.py  utility.py
PfyMU/gait/: bout_detection.py  setup.py  wear_detection.py
PfyMU/sit2stand/: __init__.py  s2s.py  setup.py  transfer_detector.py
PfyMU/tests/: base_conftest.py
build_scripts/: dist.sh
design/: gait_design.drawio
docs/: conf.py  index.rst  requirements.txt
docs/ref/: activity.rst  ambulation.rst  context.rst  features.rst  gait.rst  gait_old.rst  index.rst  io.rst  preprocessing.rst  read.rst  sit2stand.rst  skdh.rst  skimu.rst  sleep.rst  utility.rst
docs/source/: conf.py  gait_model_training.rst  index.rst
docs/src/: data.rst  installation.rst  research.rst  testing.rst  usage.rst
examples/: Wear_Activity_Gait_Sleep_Sit2Stand.ipynb  example.m  example_data_2min.csv  example_data_2min.parquet  skdh_tutorial.ipynb
old_test/: base_conftest.py
old_test/activity/: conftest.py
old_test/data/: ax3_sample.cwa  ax6_data.h5  gnactv_data.h5  gt3x_sample.gt3x
old_test/features/: test_core.py
old_test/gait/: conftest.py  test_gait.py
old_test/preprocessing/: test_calibration.py
old_test/read/: conftest.py
old_test/skimu/: conftest.py  test_pipeline.py
old_test/sleep/: test_utilities.py
old_test/utility/: test_math.py
scripts/: dsp_gait_detection.ipynb  madgwick.py
scripts/classifier_training/: NN_pytorch.ipynb  NN_tensorflow.ipynb  RFC_testing.ipynb  classifier_testing.ipynb  (+15 more)
src/skdh/: __init__.py  base.py  meson.build  pipeline.py  version.py
src/skdh/activity/: __init__.py  core.py  cutpoints.py  endpoints.py  meson.build  metrics.py  utility.py
src/skdh/ambulation/: __init__.py  core.py  meson.build
src/skdh/ambulation/model/: meson.build
src/skdh/completeness/: __init__.py  complete.py  completeness.py  helpers.py  meson.build  parse.py  utils.py  vida_explore.ipynb  visualizations.py
src/skdh/context/: __init__.py  ambulation_classification.py  core.py  gait_classification.py  meson.build  motion_detect.py
src/skdh/context/model/: ambulation_model.txt  meson.build
src/skdh/features/: __init__.py  core.py  meson.build
src/skdh/features/lib/: __init__.py  entropy.py  frequency.py  meson.build  misc.py  moments.py  smoothness.py  statistics.py  wavelet.py
src/skdh/features/lib/extensions/: __init__.py  _utility.c  entropy.c  f_rfft.f95  ffeatures.f95  frequency.c  meson.build  misc_features.c  real_fft.f95  smoothness.c  sort.f95  statistics.c  utility.f95
src/skdh/gait/: __init__.py  core.py  gait.py  gait_classification.py  get_gait_bouts.py  get_gait_classification.py  get_gait_events.py  get_strides.py  get_turns.py  meson.build  utility.py
src/skdh/gait/gait_endpoints/: __init__.py  base.py  gait_endpoints.py  meson.build
src/skdh/gait/gait_metrics/: __init__.py  base.py  gait_metrics.py  meson.build
src/skdh/gait/model/: lgbm_gait_classifier_no-stairs_50hz.lgbm  meson.build
src/skdh/gait/substeps/: __init__.py  meson.build  s1_preprocessing.py  s2_contact_events.py  s3_stride_creation.py  s4_turns.py
src/skdh/gait_old/: __init__.py  gait.py  get_gait_bouts.py  get_gait_classification.py  get_gait_events.py  get_strides.py  get_turns.py  meson.build
src/skdh/gait_old/gait_endpoints/: __init__.py  base.py  gait_endpoints.py  meson.build
src/skdh/gait_old/model/: lgbm_gait_classifier_no-stairs_20hz.lgbm  meson.build
src/skdh/gaitv3/: __init__.py  core.py  gait_classification.py  meson.build
src/skdh/gaitv3/gait_endpoints/: __init__.py  base.py  gait_endpoints.py  meson.build
src/skdh/gaitv3/gait_metrics/: __init__.py  base.py  gait_metrics.py  meson.build
src/skdh/gaitv3/model/: meson.build
src/skdh/gaitv3/substeps/: __init__.py  meson.build  s1_preprocessing.py  s2_contact_events.py  s3_stride_creation.py  s4_turns.py
src/skdh/io/: __init__.py  actigraph.py  apdm.py  axivity.py  base.py  csv.py  empatica.py  geneactiv.py  meson.build  multireader.py  numpy_compressed.py  post_read.py  utility.py
src/skdh/io/_extensions/: __init__.py  gt3x.c  meson.build  postread.c  pyread.c  read_actigraph.c  read_axivity.f95  read_binary_imu.h  read_geneactiv.c  utility.f95  window_days.c
src/skdh/preprocessing/: __init__.py  calibrate.py  gaps.py  meson.build  wear_detection.py  window_days.py
src/skdh/preprocessing/_extensions/: __init__.py  meson.build  pywindow.c  window_days.c  window_days.h
src/skdh/read/: __init__.py  actigraph.py  apdm.py  axivity.py  base.py  geneactiv.py  get_window_start_stop.py  numpy_compressed.py
src/skdh/read/_extensions/: gt3x.h  pygt3x_convert.c  pyread.c  read_actigraph.c  read_axivity.f95  read_binary_imu.h  read_geneactiv.c
src/skdh/sit2stand/: __init__.py  detector.py  meson.build  sit2stand.py
src/skdh/sleep/: __init__.py  endpoints.py  meson.build  sleep.py  sleep_classification.py  tso.py  utility.py
src/skdh/utility/: __init__.py  activity_counts.py  exceptions.py  fragmentation_endpoints.py  internal.py  math.py  meson.build  orientation.py  windowing.py
src/skdh/utility/_extensions/: __init__.py  median_heap.f95  meson.build  moving_extrema.c  moving_extrema.f95  moving_extrema.h  moving_median.c  moving_moments.c  moving_moments.f95  moving_statistics.c  moving_utility.f95  sort.f95  stack.c  stack.f95  stack.h  test
templates/: autocreate_module.py  core_template.py  core_template.txt
test/: base_conftest.py  conftest.py
tests/: conftest.py
(+800 files in other folders)
