[build-system]
# TODO: unpin from github download for meson-python. currently required to remove the "strip" command which does not work on macs
requires = [
    "meson-python",
    "wheel",
    "oldest-supported-numpy"
]
build-backend = "mesonpy"

[project]
name = "scikit-digital-health"
dynamic = [
    'version'
]
description = "Python general purpose human motion inertial data processing package."
readme = "README.rst"
license = { file = 'LICENSE' }
keyword = [
    'IMU',
    'inertial data',
    'gait',
    'sit-to-stand',
    's2s',
    'sleep',
    'activity',
    'actigraphy',
    'wear detection',
    'time series signal features',
]
authors = [
    { name = "Lukas Adamowicz", email = "lukas.adamowicz@pfizer.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Fortran",
    "Programming Language :: C",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

requires-python = ">=3.6"
dependencies = [
    "numpy>=1.17.2",
    "scipy>=1.3.1",
    "pandas>=1.0.0",
    "lightgbm>=2.3.0",
    "pywavelets",
    "scikit-learn",
    "h5py",
    "matplotlib",
    "packaging",
    "pyyaml",
    "importlib_resources;python_version<'3.7'",
    "importlib_metadata;python_version<'3.8'"
]

[project.optional-dependencies]
test = [
    'pytest',
    'coverage',
    'psutil',
    'tables'
]

[project.urls]
homepage = "https://github.com/PfizerRD/scikit-digital-health"
documentation = "https://scikit-digital-health.readthedocs.io/en/latest/"