[build-system]
requires = [
    "meson-python",
    "wheel",
    "numpy>=2.0.0rc1"
]
build-backend = "mesonpy"

[project]
name = "scikit-digital-health"
dynamic = [
    'version'
]
description = "Python general purpose human motion inertial data processing package."
readme = "README.md"
license = { file = 'LICENSE' }
keyword = [
    'IMU',
    'inertial data',
    'gait',
    'sit-to-stand',
    's2s',
    'sleep',
    'activity',
    'actigraphy',
    'wear detection',
    'time series signal features',
]
authors = [
    { name = "Lukas Adamowicz", email = "lukas.adamowicz@pfizer.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Fortran",
    "Programming Language :: C",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

requires-python = ">=3.9"
dependencies = [
    "numpy>=1.25.0",
    "scipy>=1.12.0",
    "pandas>=1.0.0",
    "lightgbm>=2.3.0",
    "pywavelets",
    "scikit-learn",
    "h5py",
    "matplotlib",
    "packaging",
    "pyyaml",
    "avro",
]

[project.optional-dependencies]
dev = [
    'pytest',
    'coverage',
    'psutil',
    # 'tables',
    "numpy>=2.0.0rc1"
]
actions = [
    'flake8',
    'wheel'
]
docs = [
    "numpydoc",
    "sphinx>=2.2.0",
    "pydata-sphinx-theme",
    "sphinx-design"
]

[project.urls]
homepage = "https://github.com/pfizer-opensource/scikit-digital-health"
documentation = "https://scikit-digital-health.readthedocs.io/en/latest/"
