[metadata]
name = scikit-digital-health
version = file: src/skdh/VERSION
description = Python general purpose human motion inertial data processing package.
long_description = file: README.md LICENSE
keywords = IMU, inertial data, gait, sit-to-stand, sleep, activity, wear detection, time series signal features
license = MIT
maintainer =
    Pfizer DMTI Analytics
    Lukas Adamowicz
    Yiorgos Christakis
maintainer_email =
    lukas.adamowicz@pfizer.com
    yiorgos.christakis@pfizer.com
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Fortran 95
    Programming Language :: C
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: MacOS/Ubuntu

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find:
zip_safe = False
install_requires =
    numpy >=1.17.2
    scipy >=1.3.1
    pandas >=1.0.0
    lightgbm >=2.3.0
    pywavelets
    scikit-learn
    h5py
    matplotlib
    packaging
    pyyaml
    importlib_resources;python_version<'3.7'

[options.packages.find]
where=src