py3.install_sources(
    [
        '__init__.py',
        'gait.py',
        'get_gait_bouts.py',
        'get_gait_classification.py',
        'get_gait_events.py',
        'get_strides.py',
        'get_turns.py',
    ],
    pure: false,
    subdir: 'skdh/gait_old',
)

subdir('gait_endpoints')
subdir('model')
