py3.install_sources(
    [
        '__init__.py',
        'apdm.py',
        'axivity.py',
        'base.py',
        'geneactiv.py',
        'multireader.py',
        'numpy_compressed.py',
        'csv.py',
        'empatica.py',
    ],
    pure: false,
    subdir: 'skdh/io',
)

if is_not_rtd_build
    subdir('_extensions')
endif
