py3.install_sources(
    [
        '__init__.py',
        'activity_counts.py',
        'fragmentation_endpoints.py',
        'internal.py',
        'math.py',
        'orientation.py',
        'windowing.py',
        'exceptions.py',
    ],
    pure: false,
    subdir: 'skdh/utility',
)

if is_not_rtd_build
    subdir('_extensions')
endif
