py3.install_sources(
    [
        '__init__.py',
    ],
    pure: false,
    subdir: 'skdh/gait/model',
)

install_data(
    [
        'final_features.json',
        'lgbm_gait_classifier_no-stairs_20hz.lgbm',
        'lgbm_gait_classifier_no-stairs_50hz.lgbm',
    ],
    install_dir: 'skdh/gait/model',
)
